	  box to a "Developer Information" dialog accessible on the Help menu.
	* Moved the Translator information from the About box to a "Translator
	  Information" dialog accessible on the Help menu.
	* Use GtkStatusIcon for the docklet, providing better integration in
	  notification area.
	* Added UI for sending attentions (buzz, nudge) on supporting protocols.

version 2.6.4 (??/??/20??):
	libpurple:
	* Actually emit the hold signal for media calls.
	* Added "MXit" protocol plugin, supported and maintained by the MXit folks
	  themselves (MXit Lifestyle (Pty) Ltd.)

	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)
	* More detailed error messages when messages fail to send.  (Aman Gupta)
	* The simultaneous login account option is respected when using
	  the clientLogin authentication method.
	* Fix offline message retrieval (broken in 2.6.3)
	* Fix SSL when clientLogin is enabled.

	MSN:
	* Don't forget display names for buddies.
	* Fix a random crash that might occur when idle.
	* Fix more FQY 240 connection errors.
	* Fix a crash that could occur when adding a buddy.
	* Fix an occasional crash when sending message to an offline user.
	* Fix a random crash that might occur when idle.
	* Fix a crash when logging in with some long non-ASCII passwords.
	  (Shaun Lindsay)

	XMPP:
	* Users connecting to Google Talk now have an "Initiate Chat" context menu
	  option for their buddies.  (Eion Robb)
	* Fix a crash when attempting to validate an invalid JID.
	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Try to automatically find a STUN server by using an SRV lookup on the